=== 0.0.8 / 2009-10-2

* Updated hash commenting so that a space is no longer necessary (i.e., '#comment' vs. '# comment' now works)
* Support empty lines in files and on the console
* Gracefully handle missing files when the -r flag is used

=== 0.0.7 / 2009-9-23

* Added support for hashed comments

=== 0.0.6 / 2009-5-29

* Works with the latest version of the Logging gem

=== 0.0.5 / 2009-04-17

* Fixed a bug where Windows services that were registered on a host but were not running were not reported as a problem

=== 0.0.4 / 2009-04-10

* More gem manifest fixes

=== 0.0.3 / 2009-04-10

* Fix broken gem
  * forgot to include new lib/os_functions.rb

=== 0.0.2 / 2009-04-10

* Support checking on Windows services
  * requires rubicante be run on a Windows host

=== 0.0.1 / 2009-04-08

* Initial alpha release
* Support adding hosts with
  * ports
  * websites
* Report 'what is wrong'