@@ -2,7 +2,8 @@
 
 * Updated hash commenting so that a space is no longer necessary (i.e., '#comment' vs. '# comment' now works)
 * Support empty lines in files and on the console
-* Gracefully handle missing files when the -r flag is used
+* Gracefully handle missing files when the -r flag is used and log an error
+* Gracefully handle SocketErrors (typically unresolvable domain names) in website response code checking and log an error
 
 === 0.0.7 / 2009-9-23
 
